--- a/blocks/card.css
+++ b/blocks/card.css
@@ -16,7 +16,7 @@
   text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
-  min-width: 352px;
+  max-width: 352px;
   margin: 12px 0 0;
   font-weight: 500;
   font-size: 20px;
@@ -26,16 +26,22 @@
 .card__like-btn {
   margin-top: auto;
   background-image: url(../images/heart.svg);
+  background-size: contain;
   width: 23px;
   height: 20px;
   border: none;
   padding: 0px;
   background-color: transparent;
   opacity: 40%;
+  cursor: pointer;
 }
 
 @media screen and (max-width: 627px) {
   .card__image {
     height: 288px;
+  }
+
+  .card__title {
+    max-width: 250px;
   }
 }
