--- a/blocks/content.css
+++ b/blocks/content.css
@@ -1,4 +1,10 @@
 .content {
-  padding: 0 80px 40px;
+  padding: 0 0 40px;
   border-bottom: 1px rgba(33, 33, 33, 0.4) solid;
+}
+
+@media screen and (max-width: 320px) {
+  .content {
+    padding: 0 0 20px;
+  }
 }
