--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -5,6 +5,7 @@
 }
 
 .profile__avatar {
+  object-fit: cover;
   border-radius: 8px;
   height: 190px;
   width: 190px;
@@ -49,10 +50,14 @@
   background-color: #fcf5e5;
   padding: 0px;
   font-weight: 500;
+  cursor: pointer;
+}
+
+.profile__edit-btn:hover {
 }
 
 .profile__add-btn {
-  width: 149px;
+  width: 157px;
   height: 52px;
   padding: 0px;
   margin-left: auto;
@@ -62,6 +67,10 @@
   border-radius: 8px;
   border-style: hidden;
   font-weight: 500;
+  cursor: pointer;
+}
+
+.profile__add-btn:hover {
 }
 
 .profile__edit-img {
@@ -74,7 +83,7 @@
   margin-right: 8px;
 }
 
-.profile @media screen and (max-width: 627px) {
+@media screen and (max-width: 627px) {
   .profile {
     flex-direction: column;
     align-items: center;
