--- a/blocks/card.css
+++ b/blocks/card.css
@@ -36,6 +36,11 @@
   cursor: pointer;
 }
 
+.card__like-btn:hover {
+  color: #212121;
+  opacity: 0.7;
+}
+
 @media screen and (max-width: 627px) {
   .card__image {
     height: 288px;
@@ -43,5 +48,16 @@
 
   .card__title {
     max-width: 250px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .card__title {
+    font-size: 16px;
+  }
+
+  .card__like-btn {
+    width: 20px;
+    height: 18px;
   }
 }
