--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -17,3 +17,9 @@
     grid-template-columns: repeat(auto-fit, 288px);
   }
 }
+
+@media screen and (max-width: 320px) {
+  .cards__list {
+    gap: 20px;
+  }
+}
