--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -48,12 +48,14 @@
   margin-top: auto;
   border: none;
   background-color: #fcf5e5;
+  opacity: 0.7;
   padding: 0px;
   font-weight: 500;
   cursor: pointer;
 }
 
 .profile__edit-btn:hover {
+  opacity: 1;
 }
 
 .profile__add-btn {
@@ -71,6 +73,7 @@
 }
 
 .profile__add-btn:hover {
+  opacity: 0.8;
 }
 
 .profile__edit-img {
@@ -120,5 +123,11 @@
   .profile__add-btn {
     margin: 0;
     width: 100%;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .profile__edit-btn {
+    justify-content: center;
   }
 }
